k8s/jitsi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: server2
              mountPath: /config
              subPath: jitsi/jicofo
        - name: prosody
          image: jitsi/prosody
          volumeMounts:
            - name: server2
              mountPath: /config
              subPath: jitsi/prosody/config
            - name: server2
              mountPath: /prosody-plugins-custom
              subPath: jitsi/prosody/prosody-plugins-custom
        - name: web
          image: jitsi/web
          ports:
            - name: jitsi
              containerPort: 80
          volumeMounts:
            - name: server2
              mountPath: /config
              subPath: jitsi/web
        - name: jvb
          image: jitsi/jvb
          ports:
            - name: jvb
              containerPort: 10000
              protocol: UDP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: server2
              mountPath: /config
              subPath: jitsi/jvb
      volumes:
        - name: server2
          persistentVolumeClaim:
            claimName: server2
