k8s/jitsi/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jitsi
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("jitsi.mchill.duckdns.org")
      kind: Rule
      services:
        - name: jitsi
          port: 80
